Minor text change.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h4><b>Answer:</b></h4>
     <div style='border: 2px solid black; margin: 10px; padding: 10px'>
     <p>The algorithm is as follows:</p>
-    <p>1.  Get a list of the files for the source computer.  The required information are the file names and file last modified dates.</p>
+    <p>1.  Get a list of the files for the source computer (JSON).  The required information are the file names and file last modified dates.</p>
     <p>2.  Get a list of files from the destination computer.</p>
     <p>3.  Compare the two lists for mismatches.</p>
     <p>A.  Source computer:</p>
